Fixed a stupid encoding mistake